--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,22 +26,32 @@ android {
         release {
             minifyEnabled false
             ndk {
-                abiFilters "arm64-v8a", "armeabi-v7a"
+                abiFilters "armeabi-v7a"
             }
         }
         debug {
             minifyEnabled false
             debuggable true
             ndk {
-                abiFilters "arm64-v8a", "armeabi-v7a"
+                abiFilters "armeabi-v7a"
             }
         }
     }
 }
 
+repositories {
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+}
+
+ext {
+    gdxVersion = '1.9.3'
+}
+
 dependencies {
     compile files("$VUFORIA_SDK_DIR/$JAR_DIR/Vuforia.jar")
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+    compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:26.+'
 }
